--- a/UserSync/src/main/resources/application.properties
+++ b/UserSync/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=UserSync
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/usersync
+spring.datasource.username=na
+spring.datasource.password=wjddbdlf
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -14,3 +19,9 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 logging.level.org.hibernate.SQL=DEBUG
 # ?????? ?? ??? ?? ??? TRACE? ??
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# rabbitMQ host ??
+spring.rabbitmq.host=localhostl
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=turtleYJ
+spring.rabbitmq.password=wjddbdlf
