feat: Spring Boot Actuator 설정

--- a/UserSync/src/main/resources/application.properties
+++ b/UserSync/src/main/resources/application.properties
@@ -21,3 +21,7 @@ spring.rabbitmq.host=localhostl
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=turtleYJ
 spring.rabbitmq.password=wjddbdlf
+
+# Actuator
+management.endpoints.exposure.include=*
+management.endpoint.health.show-details=always
