--- a/UserSync/src/main/resources/application.properties
+++ b/UserSync/src/main/resources/application.properties
@@ -23,5 +23,6 @@ spring.rabbitmq.username=turtleYJ
 spring.rabbitmq.password=wjddbdlf
 
 # Actuator
-management.endpoints.exposure.include=*
-management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
